--- a/index.html
+++ b/index.html
@@ -7,98 +7,171 @@
     <style>
       body {
         font-family: "Arial", sans-serif;
-        background-color: #f5f5f5;
+        background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+        color: #fff;
         margin: 0;
-        padding: 0;
         display: flex;
-        flex-direction: column;
-
+        justify-content: center;
+        align-items: center;
         min-height: 100vh;
+        padding: 20px;
+        box-sizing: border-box;
+        flex-direction: column;
       }
 
       #container {
-        background-color: #fff;
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 900px;
+        background: rgba(255, 255, 255, 0.1);
+        padding: 30px;
+        border-radius: 20px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 2.5em;
+        margin-bottom: 15px;
+        color: #fecb00;
+        text-transform: uppercase;
+        letter-spacing: 3px;
       }
 
       label {
         font-weight: bold;
-        margin-top: 1em;
         display: block;
+        margin-top: 20px;
+        color: #ddd;
+        text-align: left;
       }
 
       p {
-        font-size: 1.5em;
-        color: #333;
-        margin: 20px 0;
+        font-size: 1.1em;
+        color: #ddd;
+        margin: 15px 0;
       }
 
-      #imageContainer {
-        display: flex;
-        flex-wrap: wrap;
-
-        margin-top: 1em;
+      #imageContainer,
+      #imagePreview {
+        width: calc(50% - 10px);
+        height: 60vh;
+        margin-top: 20px;
       }
 
       img {
-        max-width: 100%;
-        height: auto;
+        width: 100%;
+        height: 100%;
+        object-fit: contain; /* Change cover to contain */
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
 
       button {
-        background-color: #007bff;
+        background-color: #ff6f61;
         color: #fff;
         border: none;
-        padding: 0.5em 1em;
+        padding: 15px 25px;
         font-size: 1em;
         cursor: pointer;
-        margin-top: 1em;
-        border-radius: 5px;
-        transition: background-color 0.2s;
+        margin-top: 20px;
+        border-radius: 50px;
+        transition: background-color 0.3s, transform 0.3s;
+        display: block;
+        width: 100%;
+        max-width: 250px;
+        margin: 20px auto 0;
       }
 
       button:hover {
-        background-color: #15b300;
+        background-color: #ff4c3b;
+        transform: scale(1.05);
       }
 
-      input[type="text"] {
-        width: 100%;
-        padding: 0.5em;
+      input[type="text"],
+      input[type="file"] {
+        width: calc(100% - 24px);
+        padding: 12px;
         font-size: 1em;
-        border: 1px solid #ccc;
-        margin-top: 1em;
-        border-radius: 5px;
+        border: 1px solid #555;
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.2);
+        color: #fff;
+        margin-top: 10px;
+        outline: none;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        transition: all 0.2s;
       }
-      #imagesOutput {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 1em;
+
+      input[type="text"]:focus,
+      input[type="file"]:focus {
+        border-color: #ff6f61;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       }
+
       #imagePreview {
         border-radius: 10px;
-        border: #007bff solid 2px;
-        border-color: black;
-        padding-right: 15px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        border: 2px solid #ff6f61;
+        padding: 10px;
+        margin-top: 20px;
       }
-      #imageContainer {
-        border-color: black;
+
+      #dualImages {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+        flex-direction: column; /* Stack images on top of each other on all screens */
+      }
+
+      #dualImages > div {
+        flex: 1;
+        padding: 10px;
+        background: rgba(255, 255, 255, 0.05);
         border-radius: 10px;
-        border: #007bff solid 2px;
-        max-width: 512px;
-        max-height: 512px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        width: 100%; /* Ensure 100% width */
+      }
+
+      @media (min-width: 769px) {
+        #dualImages {
+          flex-direction: row; /* Side by side layout for larger screens */
+        }
+
+        #imageContainer,
+        #imagePreview {
+          width: calc(50% - 10px);
+        }
+      }
+
+      @media (max-width: 768px) {
+        body {
+          padding: 15px;
+        }
+
+        #container {
+          padding: 20px 10px;
+        }
+
+        button {
+          width: 100%;
+        }
+
+        #dualImages {
+          flex-direction: column; /* Stack images on top of each other on small screens */
+        }
+
+        #imageContainer,
+        #imagePreview {
+          width: 100%;
+        }
       }
     </style>
   </head>
   <body>
     <div id="container">
-      <h1>Wakamole</h1>
-      <!-- -->
-      <input type="file" id="imageInput" onchange="previewImage()" />
-      <button onclick="convertToJpgAndBase64()">Upload and Convert</button>
-      <div id="base64Result"></div>
-      <!-- -->
+      <h1>OWO UWU AWA</h1>
+
+      <div id="base64Result" style="display: none"></div>
       <form onsubmit="event.preventDefault(); run(event);">
         <label for="prompt">Enter a Prompt</label>
         <input
@@ -106,13 +179,16 @@
           id="prompt"
           placeholder="Mayimon, Lunamon, Chiki, Chikita, etc..."
         />
-        <button type="submit">Generate</button>
       </form>
       <p id="inputValueDisplay"></p>
       <div id="imagesOutput">
-        <div id="imagePreview"></div>
-        <div id="imageContainer"></div>
+        <input type="file" id="imageInput" onchange="previewImage()" />
+        <div id="dualImages">
+          <div id="imagePreview"></div>
+          <div id="imageContainer"></div>
+        </div>
       </div>
+      <button onclick="convertToJpgAndBase64()">Generate</button>
     </div>
     <script src="code.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
