--- a/index.html
+++ b/index.html
@@ -165,12 +165,59 @@
           width: 100%;
         }
       }
+      @keyframes pulse {
+        0%,
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+        50% {
+          transform: scale(1.5);
+          opacity: 0.7;
+        }
+      }
+
+      #loadingScreen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        visibility: hidden; /* Hide by default */
+        opacity: 0; /* Hide by default */
+        transition: visibility 0s, opacity 0.5s; /* Smooth transition */
+      }
+
+      #loadingScreen.show {
+        visibility: visible; /* Make it visible */
+        opacity: 1; /* Fade in */
+      }
+
+      #loadingIndicator {
+        top: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 8vh;
+        height: 8vh;
+        background-color: #ffffff;
+        border-radius: 50%;
+        animation: pulse 1.5s infinite;
+      }
     </style>
   </head>
   <body>
     <div id="container">
       <h1>OWO UWU AWA</h1>
-
+      <div id="loadingScreen">
+        <div id="loadingIndicator"></div>
+      </div>
       <div id="base64Result" style="display: none"></div>
       <form onsubmit="event.preventDefault(); run(event);">
         <label for="prompt">Enter a Prompt</label>
@@ -188,8 +235,10 @@
           <div id="imageContainer"></div>
         </div>
       </div>
+
       <button onclick="convertToJpgAndBase64()">Generate</button>
     </div>
+
     <script src="code.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
   </body>
